#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package pdscalibdata
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-00-04
2011-02-01 Andy Salnikov
- added protection to CsPadCommonModeSubV1::findCommonMode for the case of 
  missing pixel status data

Tag: V00-00-03
2010-11-22 Andy Salnikov
- adding new calibration "configuration" type CsPadCommonModeSubV1

Tag: V00-00-02
2010-11-16 Andy Salnikov
- adding new calibration type CsPadPixelStatus

Tag: V00-00-01
2010-11-08 Andy Salnikov
- for now there is a single calibration class CsPadPedestalsV1