@@ -11,6 +11,10 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-00-05
+2011-02-15 Andy Salnikov
+- adding new calibration "configuration" type CsPadFilterV1
+
 Tag: V00-00-04
 2011-02-01 Andy Salnikov
 - added protection to CsPadCommonModeSubV1::findCommonMode for the case of 
